# Dateisystem

./: .gitignore  CMakeLists.txt  README.md  config.sh
src/: client.cpp  dateisystem.proto  main.c  server.cpp
